Revise README for clarity and structure